<resources>
    <string name="app_name">MovieApp</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="signOut">Sign Out</string>
    <string name="save">Save</string>
    <string name="myProfile">My Profile</string>
    <string name="login">Login</string>
    <string name="fullName">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phoneNumber">Phone number</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_phone">+380</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="you_already_have_account">Do you already have an account?</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="forgotPasswordInstruction">You forgot your password? Don\'t worry, please enter your recovery email address</string>
    <string name="submit">Submit</string>
    <string name="resetPassword">Reset password?</string>
    <string name="resetPasswordForButton">Reset password</string>
    <string name="resetPasswordInstruction">Please enter your new password to update the \n password</string>
    <string name="favouriteMovies">Favourite Movies</string>
    <string name="notSave">Not save</string>
    <string name="lets_find_your_favourite_movie">Let\'s find and save your favourite movie</string>
    <string name="incorrect_login">There is no such login.</string>
    <string name="incorrect_fullName">The full name must not contain any numbers or special characters</string>
    <string name="incorrect_password">The password must be 8 or more characters or you entered the wrong password.</string>
    <string name="incorrect_email">This mail either does not exist in the system or does not have an @ or domain.</string>
    <string name="incorrect_phone">The number of characters after +38 must be 9</string>
    <string name="notChoosePhoto">The photo must be choose</string>
    <string name="count_of_password">The password must be 8 or more characters</string>
    <string name="email_incorrect">This mail does not have an @ or domain.</string>
    <string name="incorrect_confirmed_password">The passwords don\'t match.</string>
    <string name="exist_login">Such a login already exists</string>
    <string name="topRatedMovies">Top Rated</string>
    <string name="nowPlayingMovies">Now Playing</string>
    <string name="retry">Retry</string>
    <string name="noInternetConnection">Oops, no internet connection. \nPlease check your internet connection and retry</string>
</resources>