<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".view.activity.ResetPasswordActivity">

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPassword"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/guideline10"
        app:layout_constraintStart_toEndOf="@id/guideline8"
        app:layout_constraintEnd_toStartOf="@id/guideline10"/>

    <TextView
        android:id="@+id/resetPasswordInstruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/resetPasswordInstruction"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/resetPassword"
        app:layout_constraintStart_toEndOf="@id/guideline8"
        app:layout_constraintEnd_toStartOf="@id/guideline10" />

    <TextView
        android:id="@+id/errorPasswordInResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/incorrect_password"
        android:textColor="@color/red_dark"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/newPasswordForResetPassword"
        app:layout_constraintStart_toEndOf="@id/guideline8"
        app:layout_constraintEnd_toStartOf="@id/guideline9"/>

    <TextView
        android:id="@+id/errorConfirmPasswordInResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/incorrect_confirmed_password"
        android:textColor="@color/red_dark"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordForResetPassword"
        app:layout_constraintStart_toEndOf="@id/guideline8"
        app:layout_constraintEnd_toStartOf="@id/guideline9"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordForResetPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/dark_blue"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guideline9"
        app:layout_constraintStart_toEndOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordInstruction"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/resetPasswordNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/enter_password"
            android:inputType="text"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/text_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordForResetPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/dark_blue"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guideline9"
        app:layout_constraintStart_toEndOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/errorPasswordInResetPassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/resetPasswordConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/confirmPassword"
            android:inputType="text"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/text_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <dev.sagar.progress_button.ProgressButton
        android:id="@+id/progressButtonInResetPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:corner_radius="30dp"
        app:default_text="@string/resetPasswordForButton"
        app:finish_text="@string/resetPasswordForButton"
        android:textSize="25sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:backgroundTint="@color/red"
        android:onClick="resetPassword"
        app:layout_constraintDimensionRatio="1:0.13"
        app:layout_constraintEnd_toStartOf="@id/guideline9"
        app:layout_constraintStart_toEndOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/errorConfirmPasswordInResetPassword"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="110dp" />


</androidx.constraintlayout.widget.ConstraintLayout>